--- a/.gitattributes
+++ b/.gitattributes
@@ -7,8 +7,8 @@
 *.dae filter=lfs diff=lfs merge=lfs -text
 *.dxf filter=lfs diff=lfs merge=lfs -text
 *.fbx filter=lfs diff=lfs merge=lfs -text
-*.gltf filter=lfs diff=lfs merge=lfs -text  # Added GLTF support
-*.glb filter=lfs diff=lfs merge=lfs -text   # Added GLB support
+*.gltf filter=lfs diff=lfs merge=lfs -text
+*.glb filter=lfs diff=lfs merge=lfs -text
 *.jas filter=lfs diff=lfs merge=lfs -text
 *.lws filter=lfs diff=lfs merge=lfs -text
 *.lxo filter=lfs diff=lfs merge=lfs -text
@@ -24,7 +24,7 @@
 # Audio
 *.aif filter=lfs diff=lfs merge=lfs -text
 *.aiff filter=lfs diff=lfs merge=lfs -text
-*.flac filter=lfs diff=lfs merge=lfs -text  # Added FLAC support
+*.flac filter=lfs diff=lfs merge=lfs -text
 *.it filter=lfs diff=lfs merge=lfs -text
 *.mod filter=lfs diff=lfs merge=lfs -text
 *.mp3 filter=lfs diff=lfs merge=lfs -text
@@ -36,8 +36,8 @@
 # Fonts
 *.otf filter=lfs diff=lfs merge=lfs -text
 *.ttf filter=lfs diff=lfs merge=lfs -text
-*.woff filter=lfs diff=lfs merge=lfs -text  # Added WOFF support
-*.woff2 filter=lfs diff=lfs merge=lfs -text # Added WOFF2 support
+*.woff filter=lfs diff=lfs merge=lfs -text
+*.woff2 filter=lfs diff=lfs merge=lfs -text
 
 # Images
 *.bmp filter=lfs diff=lfs merge=lfs -text
@@ -50,18 +50,18 @@
 *.pict filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.psd filter=lfs diff=lfs merge=lfs -text
-*.svg filter=lfs diff=lfs merge=lfs -text  # Added SVG support
+*.svg filter=lfs diff=lfs merge=lfs -text
 *.tga filter=lfs diff=lfs merge=lfs -text
 *.tif filter=lfs diff=lfs merge=lfs -text
 *.tiff filter=lfs diff=lfs merge=lfs -text
-*.webp filter=lfs diff=lfs merge=lfs -text # Added WebP support
+*.webp filter=lfs diff=lfs merge=lfs -text
 
 # Videos
-*.mp4 filter=lfs diff=lfs merge=lfs -text  # Added MP4 support
-*.mov filter=lfs diff=lfs merge=lfs -text  # Added MOV support
-*.avi filter=lfs diff=lfs merge=lfs -text  # Added AVI support
-*.mkv filter=lfs diff=lfs merge=lfs -text  # Added MKV support
-*.webm filter=lfs diff=lfs merge=lfs -text # Added WebM support
+*.mp4 filter=lfs diff=lfs merge=lfs -text
+*.mov filter=lfs diff=lfs merge=lfs -text
+*.avi filter=lfs diff=lfs merge=lfs -text
+*.mkv filter=lfs diff=lfs merge=lfs -text
+*.webm filter=lfs diff=lfs merge=lfs -text
 
 # Collapse Unity-generated files on GitHub
 *.asset linguist-generated
@@ -69,4 +69,4 @@
 *.meta linguist-generated
 *.prefab linguist-generated
 *.unity linguist-generated
-*.shader linguist-generated  # Added Unity shader files
+*.shader linguist-generated
